Added mbot2 to constants, added missing tooltipps.

--- a/tests/programConfiguration_playground_mbot2.html
+++ b/tests/programConfiguration_playground_mbot2.html
@@ -100,13 +100,13 @@
             +"</instance>"
             +"<instance x='100' y='50'>"
                 +"<block type='robBrick_motor_mbot2' intask=\"true\" deletable=\"false\">"
-                    +"<field name=\"NAME\">Left</field>"
+                    +"<field name=\"NAME\">L</field>"
                 +"</block>"
             +"</instance>"
             +"<instance x='100' y='120'>"
                 +"<block type='robBrick_motor_mbot2' intask=\"true\" deletable=\"false\">"
                     + "<field name=\"MOTOR_DRIVE\">EM2</field>"
-                    + "<field name=\"NAME\">Right</field>"
+                    + "<field name=\"NAME\">R</field>"
                 +"</block>"
             + "</instance>"
             +"<instance x='100' y='200'>"
@@ -412,6 +412,7 @@
                 <block type="robActions_println"></block>
                 <block type="robActions_display_clear"></block>
                 <block type="robActions_display_set_colour"></block>
+                <block type="robActions_serial_print"></block>
             </category>
             <category name="TOOLBOX_SOUND" svg="true">
                 <block type="mbedActions_play_tone"></block>
