--- a/tests/programConfiguration_playground_mbot2.html
+++ b/tests/programConfiguration_playground_mbot2.html
@@ -6,8 +6,8 @@
     <title>Program and Configuration Playground</title>
     <script src="../blockly_compressed.js"></script>
     <!-- <script src="../blocks_compressed.js"></script> -->
-    <!-- <script src="../msg/js/de.js"></script> -->
-    <script src="../msg/js/robMessages.js"></script>
+    <script src="../msg/js/de.js"></script>
+    <!-- <script src="../msg/js/robMessages.js"></script> -->
     <script src="../core/blockly.js"></script>
     <script src="../core/css.js"></script>
     <script src="../core/inject.js"></script>
@@ -112,14 +112,14 @@
                 +"</block>"
             + "</instance>"
             +"<instance x='100' y='200'>"
-                +"<block type='robConf_led' intask=\"true\" deletable=\"false\">"
+                +"<block type='robConf_rgbled' intask=\"true\" deletable=\"false\">"
                 +"</block>"
             +"</instance>"
-            +"<instance x='170' y='200'>"
+            +"<instance x='200' y='200'>"
                 +"<block type='robConf_lcd' intask=\"true\" deletable=\"false\">"
                 +"</block>"
             +"</instance>"
-            +"<instance x='260' y='200'>"
+            +"<instance x='290' y='200'>"
                 +"<block type='robConf_buzzer' intask=\"true\" deletable=\"false\">"
                 +"</block>"
             +"</instance>"
@@ -411,10 +411,28 @@
                         </block>
                     </value>
                 </block>
-                <block type="robActions_println"></block>
+                <block type="robActions_println">
+                    <value name="OUT">
+                        <block type="text">
+                            <field name="TEXT">Hallo</field>
+                        </block>
+                    </value>
+                </block>
+                <block type="robActions_display_set_colour">
+                    <value name="COLOR">
+                        <block type="robColour_picker">
+                            <field name="COLOUR">#cc0000</field>
+                        </block>
+                    </value>
+                </block>
                 <block type="robActions_display_clear"></block>
-                <block type="robActions_display_set_colour"></block>
-                <block type="robActions_serial_print"></block>
+                <block type="robActions_serial_print">
+                    <value name="OUT">
+                        <block type="text">
+                            <field name="TEXT">Hallo</field>
+                        </block>
+                    </value>
+                </block>
             </category>
             <category name="TOOLBOX_SOUND" svg="true">
                 <block type="mbedActions_play_tone">
@@ -438,6 +456,7 @@
                 </block>
                 <block type="robActions_play_getVolume"></block>
                 <block type="mbedActions_play_note"></block>
+                <block type="robActions_play_recording"></block>
             </category>
             <category name="TOOLBOX_LIGHT" svg="true">
                 <block type="robActions_led_on">
@@ -446,7 +465,8 @@
                             <field name="COLOUR">#cc0000</field>
                         </block>
                     </value>
-                </block>                <block type="robActions_led_off"></block>
+                </block>                
+                <block type="robActions_led_off"></block>
                 <block type="robActions_led_setBrightness">
                     <value name="BRIGHTNESS">
 					    <block type="math_number">
@@ -469,7 +489,6 @@
                     </value>
                 </block>
                 <block type="robActions_quadRGB_led_off"></block>
-                <block type="robActions_brickLight_on"></block>
             </category>
         </category>
         <category name="TOOLBOX_SENSOR" svg="true">
@@ -477,6 +496,7 @@
             <block type="robSensors_quadrgb_getSample"></block>
             <block type="robSensors_line_getSample"></block>
             <block type="robSensors_sound_getSample"></block>
+            <block type="robSensors_sound_record"></block>
             <block type="robSensors_joystick_getSample"></block>
             <block type="robSensors_key_getSample"></block>
             <block type="robSensors_light_getSample"></block>
@@ -485,7 +505,6 @@
             <block type="robSensors_accelerometer_getSample"></block>
             <block type="robSensors_timer_getSample"></block>
             <block type="robSensors_timer_reset"></block>
-            <block type="robSensors_sound_record"></block>
             <block type="robSensors_encoder_getSample"></block>
             <block type="robSensors_encoder_reset"></block>
         </category>
@@ -640,28 +659,50 @@
         </category>
         <category name="TOOLBOX_COLOUR" svg="true">
             <block type="robColour_picker">
-                <field name="COLOUR">#585858</field>
+                <field name="COLOUR">#9b9b9b</field>
             </block>
             <block type="robColour_picker">
-                <field name="COLOUR">#000000</field>
+                <field name="COLOUR">#d0021b</field>
             </block>
             <block type="robColour_picker">
-                <field name="COLOUR">#0057a6</field>
+                <field name="COLOUR">#f8e71c</field>
             </block>
             <block type="robColour_picker">
-                <field name="COLOUR">#00642e</field>
+                <field name="COLOUR">#7ed321</field>
             </block>
             <block type="robColour_picker">
-                <field name="COLOUR">#f7d117</field>
+                <field name="COLOUR">#50e3c2</field>
             </block>
             <block type="robColour_picker">
-                <field name="COLOUR">#b30006</field>
+                <field name="COLOUR">#4a90e2</field>
             </block>
             <block type="robColour_picker">
-                <field name="COLOUR">#FFFFFF</field>
+                <field name="COLOUR">#bd10e0</field>
             </block>
             <block type="robColour_picker">
-                <field name="COLOUR">#532115</field>
+                <field name="COLOUR">#F9F9F9</field>
+            </block>
+            <block type="mbedColour_rgb">
+                <value name="RED">
+                    <block type="math_number">
+                        <field name="NUM">255</field>
+                    </block>
+                </value>
+                <value name="GREEN">
+                    <block type="math_number">
+                        <field name="NUM">20</field>
+                    </block>
+                </value>
+                <value name="BLUE">
+                    <block type="math_number">
+                        <field name="NUM">150</field>
+                    </block>
+                </value>
+                <value name="WHITE">
+                    <block type="math_number">
+                        <field name="NUM">255</field>
+                    </block>
+                </value>
             </block>
         </category>
         <category name="TOOLBOX_VARIABLE" custom="VARIABLE" svg="true">
