Added button port

--- a/tests/programConfiguration_playground_mbot2.html
+++ b/tests/programConfiguration_playground_mbot2.html
@@ -126,14 +126,16 @@
             +"<instance x='100' y='250'>"
                 +"<block type='robConf_key' intask=\"true\" deletable=\"false\">"
                     + "<field name=\"NAME\">A</field>"
-                +"</block>"
-            +"</instance>"
-            +"<instance x='100' y='280'>"
-                +"<block type='robConf_key' intask=\"true\" deletable=\"false\">"
-                    + "<field name=\"NAME\">B</field>"
+                    + "<field name=\"PIN1\">A</field>"
                 +"</block>"
             +"</instance>"
             +"<instance x='100' y='310'>"
+                +"<block type='robConf_key' intask=\"true\" deletable=\"false\">"
+                    + "<field name=\"NAME\">B</field>"
+                    + "<field name=\"PIN1\">B</field>"
+                +"</block>"
+            +"</instance>"
+            +"<instance x='100' y='370'>"
                 +"<block type='robConf_joystick' intask=\"true\" deletable=\"false\">"
                 +"</block>"
             +"</instance>"
