--- a/tests/programConfiguration_playground_mbot2.html
+++ b/tests/programConfiguration_playground_mbot2.html
@@ -6,8 +6,8 @@
     <title>Program and Configuration Playground</title>
     <script src="../blockly_compressed.js"></script>
     <!-- <script src="../blocks_compressed.js"></script> -->
-    <script src="../msg/js/de.js"></script>
-    <!-- <script src="../msg/js/robMessages.js"></script> -->
+    <!-- <script src="../msg/js/de.js"></script> -->
+    <script src="../msg/js/robMessages.js"></script>
     <script src="../core/blockly.js"></script>
     <script src="../core/css.js"></script>
     <script src="../core/inject.js"></script>
